# ds2dc

./: .gitignore  Dockerfile  Dockerfile1.dockerfile  README.MD  README.md  RunDocker.sh  docker-compose.yml  kv_to_redis.py  meta-data.json  output_file.json  populate_csvs.sh  pyproject.toml  requirements.txt  script.bat  setup.py  tbl_to_csvs.py  test.py
DsToDc/smartconv/: __init__.py  main.py  run_converter.py
Testing scripts/: convert_to_redis.py  tbl_to_csvs.py
import_scripts/: import_graph_data.sh  import_tabular_data.sh
random/folder/: ApacheCalcite-Standardized.json  fakegexf.gexf
smartConvDS/: README.MD  main.py  run_converter.py
smartConvDS/Crawler/: scanFilefolder.py
smartConvDS/Docker_related/: __init__.py  docker_composer_run.py  generateImage.py  generateImage_backup.py
smartConvDS/Testing/: convert_to_redis.py
smartConvDS/conversion_scripts/: TabularConvert.py  __init__.py  arcFileCopy.py  convert.py  convertDocKV.py  documentConvert.py  graphConvert.py
smartConvDS/import_scripts/: import_docs.sh  import_kv_data.sh
smartConvDS/init_scripts/: init_arc.sh
smartconv/: TabularConvert.py  convert.py  convertKeyValue.py  fill_json.py  generateImage.py  graphConvert.py  main.py  scanFilefolder.py
smartconv/Crawler/: checkArcConstraints.py  scanFilefolder.py
smartconv/Docker_related/: fill_json.py  generateImage.py  generateImage_backup.py
smartconv/Testing/: convert_to_redis.py  tbl_to_csvs.py
smartconv/conversion_scripts/: TabularConvert.py  convert.py  convertDocKV.py  convertKeyValue.py  documentConvert.py  graphConvert.py
(+60 files in other folders)
